# SpatialInformation

./: .flake8  .gitignore  Makefile  README.md  environment.yaml  environment.yml  pyproject.toml
data/testdata/: 20240903_Dc_1_anatomy.tif  20240903_Dc_1_behavior.pkl
docs/: .buildinfo  search.html  spatialinfo.html  usage.html
docs/source/: conf.py  usage.rst
scripts/: 01_behavior.ipynb  02_SpatialInformationCoding.ipynb  03_LocationDecoding.ipynb  04_DimensionalityAnalysis.ipynb  05_TimeDecoding.ipynb  06_PlaceFieldAnalysis.ipynb  07_alDl.ipynb  DimensionalityAnalysis.ipynb  LocationDecoding.ipynb  SpatialInformationCoding.ipynb  logistic_regression.py  manifold.py  preprocessing.py  spatialdecoding.py  stats.py
scripts/.ipynb_checkpoints/: LocationDecoding-checkpoint.ipynb
src/spatialinfo/: basis_decoder.py  decoder.py  dimensionality_utils.py  io.py  spatial_information.py  utils.py  validation.py
