[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialinfo"
version = "0.1.0"
description = "analysis scripts for neural spatial information coding"
authors = [{ name = "Lukas Anneser", email = "lukas.anneser@fmi.ch"}]
dependencies = []

[tool.setuptools]
packages = ["spatialinfo"]
